--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
     A quick demo written in Rust with WASM for visualizing error propagation in 
     SLAM applications. Mapping is done based on ray tracing from the agent with
     noise added with each movement. Localization is attempting with a scoring
-    heuristic based on the SLAM map and current observations.
+    heuristic based on the SLAM map and current observations. Maps are procedurally generated,
+    so if you don't like the current one, just refresh the page to generate a new one.
+    <a href="https://github.com/ryankima/slam_demo">https://github.com/ryankima/slam_demo</a>
   </div>
 
   <script type="module">
